--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,143 +1,61 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 <style>
-
-
-.user-name{
-  border: 1px,solid,black;
-  padding:3px;
-
-}
-.btn-search{
-  background-color: #fe424d;
-  color:#fff;
-  border-radius: 25px;
-  padding: 0 1rem 0 1rem;
-}
-.btn-search:hover{
-  background-color: #fe424d;
-  color:#fff;
-}
-.btn-search i{
-  display:inline;
-  margin-right: 0.5rem;
-}
-.search-input{
-  border-radius: 25px;
-  padding: 0.5rem 3rem 0.5rem 3rem;
-  font-size: 1rem;
-}
-.AirBnb-create{
-  margin-right: 1rem;
-  font-size: 0.9rem;
-  font-weight: 600;
-display: flex;
-align-items: center;
-
-}
-
-.AirBnb-create:hover{
- 
-  border-radius: 25px;
-  background-color:#f7f7f7;
-}
-  
-.bar{
-   background-color:white;
-}
-.dropdown{
-  position:relative;
-} 
-.userSignLogin{
- 
-  border:1px solid #f1dfdf !important;
-  border-radius: 25px !important;
-  margin-right: 2rem;
-  box-shadow:  0 0 10px rgba(53, 52, 52, 0.1);
-}
-.userSignLogin i{
-  padding: 0.2rem;
-}
-.dropdown-menu-custom{
- margin-top: 0.1rem !important;
-
- background-color: #f7f7f7;
-} 
-/* @media screen and (max-width: 450px) {
-  .userSignLogin{
-   
-    margin-right: 80rem !important;
- background-color: black;
-} 
-} */
-.logout-user{
-  height: 10px;
-  border-radius: 50px;
-  width: 10px;
-
-
-}
-
-
-  </style>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+  .search-btn {
+    background-color: red;
+    color: white;
+    border-radius: 25px;
+    padding: 0 1rem 0 1rem;
+  }
+  .search-btn:hover {
+    background-color: red;
+    color: white;
+  }
+  .search-btn i {
+    display: inline;
+    margin-right: 0.5rem;
+  }
+  .search-inp {
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+  }
+</style>
+<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/listings"><i class="fa-solid fa-compass"></i></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-    >
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse bar" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-         
-                <a class="nav-link" href="/listings">Explore</a>
-              
-            </div>
-            <div class="navbar-nav ms-auto">
-              <form class="d-flex" role="search">
-                <input class="form-control me-2 search-input" type="search" placeholder="Search Destinations" >
-                <button class="btn btn-search" type="submit"> <i class="fa-solid fa-magnifying-glass"></i>Search</button>
-              </form>
-            </div>
-            <div class="navbar-nav ms-auto ">
-              <a class="nav-link AirBnb-create" href="/listings/new">Airbnb your home</a>
-              <% if(!currUser){%>
-              
-                    <button class="btn  userSignLogin" data-bs-toggle="dropdown" >
-                            <i class="fa-solid fa-bars"></i>
-                            <i class="fa-solid fa-user"></i>
-                          </button>
-                          <ul class="dropdown-menu dropdown-menu-Light dropdown-menu-custom">
-                            <li><a class="dropdown-item " href="/signup">Signup</a></li>
-                            <li><a class="dropdown-item " href="/login">Login</a></li>
-                          
-                          </ul>
-                       
-                      <%}%>
-              <% if(currUser){%>
-
-                
-                
-               
-              <%}%>
-            </div>
-            
+      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+      <button class="navbar-toggler" type="button" 
+      data-bs-toggle="collapse" 
+      data-bs-target="#navbarNavAltMarkup">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+        
+          <a class="nav-link" href="/listings">Explore</a>
         </div>
-    </div>
-</nav>
-<!-- <script>
-  let searchBtn=document.querySelector(".btn-search")
-  searchBtn.addEventListener("click",()=>{
-    event.preventDefault();
-    console.log("clicked");
-    let searchInput = document.querySelector(".search-input");
-    console.dir(searchInput);
-   
- });
+       
+         <div class="navbar-nav ms-auto">
+          <form class="d-flex" role="search">
+            <input 
+            class="form-control me-2 search-inp" 
+            type="search" 
+            placeholder="Search destination" 
+       
+            />
+            <button class="btn search-btn" type="submit">
+              <i class="fa-solid fa-magnifying-glass-location"></i>Search
+            </button>
+          </form>
+         </div>
+            <div class="navbar-nav ms-auto">
+              <a class="nav-link" href="/listings/new">Add Place</a>
 
-</script> -->
+              <% if(!currUser) { %> 
+              <a class="nav-link" href="/signup"><b>Sign Up</b></a>
+              <a class="nav-link" href="/login"><b>Log in</b></a>
+           <% } %> <% if(currUser) { %> 
+              <a class="nav-link" href="/logout"><b>Log Out</b></a>
+            <% } %>
+            </div>
+        </div>
+      </div>
+    </div>
+  </nav>
