--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -63,17 +63,12 @@
      <div class="mb-3">
       <label for="category" class="form-label">Category</label>
       <select name="listing[category]" id="category" multiple class="form-select" aria-label="Multiple select example">
-          <option value="Trending">Trending</option>
-          <option value="Rooms">Rooms</option>
-          <option value="Boats">Boats</option>
-          <option value="Domes">Domes</option>
-          <option value="Iconic cities">Iconic cities</option>
-          <option value="Mountains">Mountains</option>
-          <option value="Castles">Castles</option>
-          <option value="Arctic">Arctic</option>
-          <option value="Camping">Camping</option>
-          <option value="Amazing pools">Amazing pools</option>
-          <option value="Farms">Farms</option>
+          <option value="Trending">PPU Hubs</option>
+          <option value="Rooms">PPU Syllabus</option>
+          <option value="Boats">PPU NewsPaper Cutting</option>
+          <option value="Domes">PPU Study center</option>
+          <option value="Iconic cities">PPU Notice</option>
+          <option value="Mountains">PPU College Lists</option>
       </select>
      </div>
    
