--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -81,6 +81,7 @@ text-align: center;
     <div class="col-8 offset-3 show-card">
     <h2><%=listing.title%> </h2>
     </div>
+    <!-- IMAGE CLICK KARNE KE BAAD SBKA DETAILS -->
      <div class="card col-6 offset-3 listing-card">
         <img src="<%= listing.image.url%>" class="card-img-top show-img" alt="listing image">
         <div class="card-body">
@@ -153,6 +154,9 @@ text-align: center;
 
 </form>
 <%}%>
+
+<!-- REVIEW SECTION -->
+
 <%if(listing.reviews.length > 0){%>
 <div class="row">
 <p><b>All Reviews</b></p>
@@ -174,9 +178,9 @@ text-align: center;
 <%}%>
 </div>
 <%}%>
-<div class="col-8 offset-3 mb-3"></div>
+<!-- <div class="col-8 offset-3 mb-3"></div>
 <h3>Where you’ll be</h3>
-<div id="map"></div>
+<div id="map"></div> -->
 
 </div>
 
